Restore Dutch translation after many years.